0032718: Draw Harness, ViewerTest - fix misprint in vanim command description